--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <img src="2.png" alt="">
         <img src="3.png" alt="">
         <img src="4.png" alt="">
-        
+        <img src="5.png" alt="">
+        <img src="6.png" alt="">
+        <img src="7.png" alt="">
     </div>
 </body>
 </html>
